--- a/style.css
+++ b/style.css
@@ -225,15 +225,8 @@ footer{
 	margin-top: 30px;
 }
 
-@media screen and (min-width: 751px) and (max-width: 950px){
-	
-}
 
-@media screen and (min-width: 560px) and (max-width: 750px){
-	
-}
-
-@media screen and (min-width: 419px) and (max-width: 768px){
+@media screen and (max-width: 319px){
   .wrapLamoCase{
 	max-width: 48%;
 	padding: 4px;
