--- a/style.css
+++ b/style.css
@@ -226,7 +226,7 @@ footer{
 }
 
 
-@media only screen and (max-width: 600px){
+@media only screen and (min-width: 600px){
   .wrapLamoCase{
 	max-width: 48%;
 	padding: 4px;
