--- a/style.css
+++ b/style.css
@@ -226,55 +226,65 @@ footer{
 }
 
 
-@media only screen and (max-width: 500px){
-	div.wrapLampCase{
-		display: grid;
-		grid-template-columns: 1fr 1fr;
-  }
+@media only screen and (min-width: 751px) and (max-width: 950px){
+	.content{width: 90%; }
+	.header{ height: 320px; width: 100%;}
+	span.littleTitleHead, span.price{ font-size: 11pt;}
+	div.titleHead{top: 40px; margin-left: 90px; line-height: 23pt; font-size: 15pt;}
+	div.advantages{	top: 180px;	width: 300px;}
+	div.adv{ font-size: 9pt; padding: 3px;}
+	div.action{	top: 140px;	padding: 9px; width: 185px; font-size: 0.93em;}
+	div.orderDiv{ margin-top: 9px; }
+	input.order{ font-size: 14px;}
 
-  #gig{
-	width: 300px;
-	height: 250px;
-  }
+	div.wrapLampCase { width: 100%; }
+	div.historyItem{ width: 95%; display: flex; justify-content: space-between; }
+	footer{padding: 9px 0 9px 0;  font-size: 15px;}
+}
 
-	.reviews{
-		flex-direction: column;
-		align-items: flex-start;
-	}
+@media only screen and (min-width: 560px) and (max-width: 750px){
 
-	.historyImg{
-       display: none;
-	}
+	div.itgen {top: 150px;}
+	.content{width: 100%; }
+	.header{ height: 500px; width: 100%; display: flex; flex-wrap: wrap;}
+	span.littleTitleHead, span.price{ font-size: 11pt;}
+	div.photo { width: 100%; height: 65%;}
+	div.sale { width: 100%; height: 35%;}
+	div.action{	top: 10px;	width: 50%; max-width: 270px; min-width: 220px; }
+	div.titleHead{top: 40px; margin-left: 55px; font-size: 19px; line-height: 20pt;}
+	div.advantages{	top: 180px; left: 150px;}
+	div.adv{ font-size: 10pt; padding: 3px;}
+	section{margin-top: 0;}
+	div.historyImg{ width: 25%; margin-top: 15px;}
+	div.historyImg img{ width: 100px; height: 100px; }
+	div.historyTxt{ width: 70%; padding-left: 10px; padding-right: 10px; font-size: 13px;}
+	footer{padding: 8px 0 8px 0;  font-size: 14px;}
+}
 
-	.itgen{
-		display: none;
-	}
+@media only screen and (min-width: 350px) and (max-width: 559px){
+	.content{width: 100%; }
+	.header{ height: 450px; width: 100%; display: flex; flex-wrap: wrap;}
+	span.littleTitleHead, span.price{ font-size: 10pt;}
+	div.photo { width: 100%; height: 65%;}
+	div.sale { width: 100%; height: 35%;}
+	div.action{	top: 15px;	width: 50%; max-width: 270px; min-width: 220px; font-size: 0.9em; height: 120px;}
+	div.titleHead{top: 30px; margin-left: 30px; font-size: 12px; line-height: 12pt;}
+	div.advantages{	top: 130px; left: 10%;}
+	div.adv{ font-size: 8pt; padding: 2px;}
+	section{margin-top: 0;}
+	input[type=phone]{ margin-top: 5px;}
+	h6, h5{padding-top: 5px;}
+	div.orderDiv{ margin-top: 7px; }
+	span.price, input.order{ font-size: 10pt;}
+	.historyImg img, div.itgen{display: none;}
+	div.wrapLampCase { width: 340px; height: 850px; margin: 20px auto;}
+	div.wrapLampCase div.photoI{ width: 50%; height: 20%; }
 	
-	.reviews{
-		margin-top: 950px;
-	}
+	div.historyTxt{ width: 90%; padding-left: 10px; padding-right: 10px; font-size: 13px; margin-top: 20px;}
+	footer{padding: 10px 0 10px 0;  font-size: 14px; flex-wrap: wrap;}
+	footer div{ width: 100%; text-align: center; margin-top: 15px; }
+}
 
-	footer{
-       display: block;
-	   text-align: center;
-	   
-	}
-
-	.content{
-		width: 153%;
-	}
-
-	.header{
-		display: block;
-		font-size: 20px;
-	}
-
-	.photo::before{
-		width: 600px;
-		background: url(./img/header.jpg);
-	}
-
-	.sale{
-		
-	}
+d{
+	align-items: baseline;
 }
